# gpt4o-discord

./: .editorconfig  README.md  pyproject.toml
gpt4o-discord/: __main__.py
